@@ -11,6 +11,7 @@
 - Allow ellipsis string to be set on Label.
 - AssetManager gets hook for handling loading failure.
 - TextField now fires a ChangeEvent when the text change. Can be cancelled too!
+- Added tooltips to scene2d.ui.
 
 [1.6.3]
 - Updated to RoboVM 1.4
